make sure product-options fits on mobile

--- a/src/components/product-options/style.sass
+++ b/src/components/product-options/style.sass
@@ -21,7 +21,8 @@ $desc-color: #424243
   & > div
     position: relative
 
-
+  @media screen and (max-width: 500px)
+    width: 100vw
 
 
 .left
